# C-train_course

./: 5_spr_yandex.cpp  5_sprint_for_itg.cpp  7spr.cpp  another.cpp  array_ptr.h  firstcode.cpp  iterim.cpp  log_duration.h  main.cpp  main_2.cpp  pairs_teory  print_interval.cpp  progres  progres.cpp  readme  solvation  solvation.cpp  spr_3_itg.cpp  spr_4_itg_before_rewiev.cpp  task_1  task_1.cpp  task_current  task_current.app  task_current.cpp  task_current.сpp  teory.cpp  test_framework.h
10_4_v1/: input_reader.cpp  input_reader.h  transport_catalogue.cpp  transport_catalogue.h
11_2_v0/: json_reader.cpp  json_reader.h  map_renderer.h  readme  request_handler.cpp  transport_catalogue.cpp
11_itg_1_v4/: input_reader.cpp  json.cpp  json_reader.h  svg.cpp
11_spr/: readme  scr_2.cpp  scratch.cpp
11_spr_2_v0/: json_reader.cpp  json_reader.h  main.cpp  readme  transport_catalogue.cpp  transport_catalogue.h
11_spr_3_0/: json.h  map_renderer.cpp  map_renderer.h  readme  svg.h  transport_catalogue.h
11_spr_transp/: readme
13_fin/: readme
14_10/: equals_to_one_of.cpp  readme
14_11/: apply_to_many.cpp  readme
14_12/: main.cpp  optional.h  readme
14_5/: readme
14_6/: readme  vector.h
14_7/: readme  vector.h
14_7_real/: readme  vector.h
14_8/: readme  vector.h
14_9/: readme  vector.h
14_fin/: readme  vector.h
15_spr/: 1.cpp  15_2_readme  1_readme  1_solve.cpp  iterim.cpp  itg_1.cpp  (+8 more)
15_spr/15_5/: 2.dog-neg.ppm  CMakeLists.txt  readme
15_spr_fin/15_CLION_1/: CMakeLists.txt  json_reader.cpp  main.cpp  transport_catalogue.cpp  transport_catalogue.h
(+1110 files in other folders)
